# boardgame-tracker

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/boardgame_tracker_backend/: backend_prestart.py  initial_data.py  main.py
backend/boardgame_tracker_backend/api/: all_routes.py  dependencies.py
backend/boardgame_tracker_backend/api/routers/: games.py
backend/boardgame_tracker_backend/core/: config.py  database.py
backend/boardgame_tracker_backend/domain/: games.py
backend/boardgame_tracker_backend/models/: game.py  game_result.py  game_session.py  player.py
backend/scripts/: prestart.sh  start.sh
backend/tests/boardgame_tracker_backend/: conftest.py  test_main.py
backend/tests/boardgame_tracker_backend/api/routers/: test_games.py
backend/tests/boardgame_tracker_backend/domain/: test_game.py
